# TW_STOCK

./: .dockerignore  .env.example  .gitignore  ALL_STOCKS_VERIFICATION_REPORT.md  API.md  ARCHITECTURE.md  ARCHITECTURE.md.bak_v2  ARCHITECTURE_DETAIL.md  AUDIT_COMPARISON_ANALYSIS.md  AUDIT_COMPLETE.txt  AUDIT_COMPLETION_STATUS.json  AUDIT_FIXES_COMPLETION_REPORT.md  AUDIT_SUMMARY.txt  AUTONOMOUS_VALIDATION_COMPLETE.md  BACKTESTING_FACTOR_COMPLETION_REPORT.md  BACKTESTING_FACTOR_GUIDE.md  BACKTEST_ANALYSIS_REPORT.md  CHANGELOG.md  CODE_REFACTOR_EXECUTION_PLAN.md  COLLECTION_OPTIMIZATION_COMPLETE.md  COLLECTION_OPTIMIZATION_REPORT_20260217_170158.json  COLLECTION_UNIFICATION_REPORT.md  COMPLETE.md  COMPLETE_DATA_COVERAGE_REPORT.md  COMPLETE_SYSTEM_AUDIT_REPORT.md  COMPLETE_SYSTEM_TEST_REPORT.md  COMPLETE_SYSTEM_VERIFICATION.md  COMPLETE_VALIDATION_REPORT.md  COMPREHENSIVE_SYSTEM_CHECK.md  CONTRIBUTING.md  CRITICAL_ISSUES_FIX_REPORT.md  CRONTAB_QUICK_SETUP.md  CURRENT_STATUS_SUMMARY.md  DATABASE_AUDIT_REPORT.md  DATABASE_CONSOLIDATION_ANALYSIS.md  DATABASE_CONSOLIDATION_COMPLETE.md  DATABASE_IMPROVEMENT_COMPLETION_REPORT.md  DATABASE_IMPROVEMENT_EXECUTION_GUIDE.md  DATABASE_IMPROVEMENT_FINAL_REPORT.md  DATABASE_IMPROVEMENT_REPORT.md  (+128 more)
dashboard/: app.py  app.py.bak_team
data/: missing_priority_stocks.txt  multifactor_signals.csv  priority_stocks.txt
deploy/: README.md  crontab.txt
docs/: CHANGELOG_2026-06.md  DASHBOARD_DATE_FIX.md  FINMIND_INTEGRATION_12_WEEK_PLAN.md  FINMIND_MIGRATION_GUIDE.md  MORPHOLOGY_INTEGRATION_GUIDE.md  MORPHOLOGY_MANUAL.md  chat_history.md  (+1 more)
(+495 files in other folders)
