[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tw-stock-analysis"
version = "2.2.0"
description = "台股智能分析系統 — 多因子選股、技術分析、估值模型、風險管理、LINE 通知"
readme = "Readme.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Ming Huang", email = "huang.acron@gmail.com"}]

dependencies = [
    "pymongo>=4.6",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "feedparser>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "ruff>=0.1"]
nestjs = ["nodejs"]

[project.scripts]
twstock = "src.cli.query:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "unit: Unit tests (no DB required)",
    "integration: Integration tests (requires MongoDB)",
    "slow: Slow tests (API calls, large data)",
]

[tool.ruff]
line-length = 120
target-version = "py311"
